static/css/hl.css
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Global styles
   */

html {
  position:relative;
  min-height:100%;
}

body {
  background:#fff;
  font-family: "Open Sans", sans-serif;
  font-size:13px;
  margin:0 0 4em;
  padding:0;
}

pre {
  font-family: ubuntu mono, monospace;
}

code {
  background: #eee;
  color: #4F4371;
  font-family: ubuntu mono, monospace;
}

.wrap {
  background:#fff;
  padding-bottom:2em;
}

p,ul,li {
  font-size:15px;
}

h1 {
  margin-top:.1em;
  margin-left:0;
  text-indent:-.05em;
}

h2 {
  color:#6e618d;
}

.muted {
  opacity: 0.6;
}

.footer {
  background-color:#323232;
  color:#999;
  position:absolute;
  bottom:0;
  width:100%;
  height:4em;
  overflow: hidden;
  line-height:2em;
}

.footer p {
  margin-top:1em;
  font-size:13px;
  height: 30px;
  overflow: hidden;
}

.footer a {
  color: #fff;
}

.footer .item + .item {
  margin-left: 2em;
}

.logo {
  font-family: Haskell;
  font-weight:400;
}

.span12 ul li + li {
  margin-top: 0.5em;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Navigation
   */

.mobile > .navbar {
  display: none;
}
.navbar {
  background-color:#352f44;
  border-radius:0;
  border:0;
}

.navbar-brand {
  color:#fff;
  font-size:inherit;
  font-weight:700;
  margin-left: 0 !important;
  padding-left:0;
}

.navbar-default .navbar-brand {
  color:#fff;
}

.navbar-brand .logo {
  margin-right:.5em;
  color:#fff;
}

.navbar-default .navbar-nav > .active > a {
  color:#d1cddc!important;
  background-color:#312b3f;
  border-bottom:.3em solid #465787;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color:#fff;
}

.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color:#fff!important;
  background-color:#312b3f;
}

.navbar-default .navbar-nav > li > a {
  color:#d1cddc!important;
  background-color:inherit;
}

.navbar a:hover {
  color: #c3a6e0;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Template
   */

.template .navbar {
  margin-bottom:.5em;
}

.template code {
  background-color:#f5f5f5;
  color:#366354;
}

.template pre {
  font-size:14px;
  word-wrap: normal;
}

.template .container > .row {
  max-width:none;
}

.template .breadcrumb {
  padding-left:0;
  background-color:inherit;
  margin-bottom:0;
}

.template .breadcrumb li {
  margin-right: 5px;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   News page
   */

.page-news .span6 {

}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Home page
   */

.page-home #video-anchor {
  color: #fff;
  text-decoration: none;
}

.page-home .navbar-collapse {
  margin-left: -30px;
}

.page-home .navbar {
  margin-bottom:0;
  background: #150e1a; /* Old browsers */
  background: -moz-linear-gradient(left, #150e1a 0%, #22172a 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#150e1a), color-stop(100%,#22172a)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left, #150e1a 0%,#22172a 100%); /* IE10+ */
  background: linear-gradient(to right, #150e1a 0%,#22172a 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#150e1a', endColorstr='#22172a',GradientType=1 ); /* IE6-9 */
}

.page-home .navbar-brand,.page-home .navbar-brand .logo {
  color: #d1cddc!important;
  cursor: default;
}

/* * * * * * * * * * * * * * * * * * * *
   Header
   */

.page-home .header {
  cursor: default;
  color: #fff;
  background: #19111f; /* Old browsers */
  background: -moz-linear-gradient(left, #19111f 0%, #2c1e37 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#19111f), color-stop(100%,#2c1e37)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* IE10+ */
  background: linear-gradient(to right, #19111f 0%,#2c1e37 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19111f', endColorstr='#2c1e37',GradientType=1 ); /* IE6-9 */
}

.page-home .header .branding {
  margin-top: 50px;
}

.page-home .header {
  padding-bottom: 40px;
}

.page-home .header .branding .name {
  display: block;
  font-size: 50px;
  font-family: Ubuntu, sans-serif;
  line-height: 50px;
  padding-left: 80px;
  font-weight: bold;
  background-position: left;
  background-repeat: no-repeat;
  background-size: 70px;
}

.page-home .header .branding .summary {
  margin-top: 20px;
  display: block;
  font-size: 20px;
}

.page-home .header .branding .tag {
  display: block;
  font-size: 30px;
}

.page-home .header .code-sample pre {
  background: inherit;
  border: 0;
}

.page-home .header .code-sample * {
  color: #CCC;
}

.page-home .header .code-sample .hs-definition {
  color: #A2D1F9;
}

.page-home .header .code-sample .hs-num {
  color: #D8BCF5;
}

.page-home .header .code-sample .hs-keyword {
  color: #FFF;
}

.page-home .header .code-sample .hs-layout,
.page-home .header .code-sample .hs-keyglyph {
  color: #FAFAFA;
}

/* * * * * * * * * * * * * * * * * * * *
   Try Haskell
   */

#console {
  font-family: monospace;
}

.jquery-console-nofocus {
  opacity: 0.8;
}

.jquery-console-focus .jquery-console-cursor {
  background:#aaa;
  color:#eee;
  font-weight:bold;
}

.jquery-console-inner {
  max-height: 20em;
  overflow: auto;
  word-wrap: break-word;
}

.jquery-console-prompt-label {
  color: #8f4e8b;
  font-weight: bold;
}

.jquery-console-prompt-box {
  clear: both;
}

.jquery-console-error {
  color: #8f4e8b;
  clear: left;
}

.jquery-console-value {
  color: #2e659c;
  clear: left;
  float: left;
}

.jquery-console-stdout {
  color: #216f42;
  clear: left;
  float: left;
}

.jquery-console-type {
  color: #777;
}

.jquery-console-welcome {
  color: #888;
  margin-bottom: 0.5em;
}

.jquery-console-stdout + .jquery-console-type {
  display: none !important;
}

.jquery-console-value:empty + .jquery-console-type {
  visibility: visible;
}

.jquery-console-value + .jquery-console-type {
  float: left;
  margin-left: .5em;
}

#guide .spoiler {
  color: #f7f7f9;
  background: #f7f7f9;
}

#guide .spoiler:hover {
  color: #d14;
}

.page-home .try {
  margin-top: 10px;
  margin-bottom: 30px;
}

.page-home .try code * {
  background: inherit;
}

.page-home .try code {
  background-color: #f7f7f9;
  color: #366354;
  border: 1px solid #e1e1e8;
}

.page-home .try h2 {
  font-size: 25px;
  color: #000;
  margin-bottom: 20px;
}

/* * * * * * * * * * * * * * * * * * * *
   Community
   */

.page-home .community #video-description {
  display: none;
}

.page-home .community {
  margin-top: 30px;
  padding-top: 40px;
  background-repeat: no-repeat;
  background-position: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.page-home .community h1 {
  color: #fff;
  text-shadow: 0px 0px 10px #555;
}

.page-home .community .learn-more {
  margin-top: 80px;
  margin-bottom: 40px;
}

.page-home .community .learn-more a {
  color: #fff;
}

.page-home .videos {
  background: #111111;
}

.page-home .videos ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.page-home .videos li {
  display: inline-block;
  margin-bottom: 20px;
}

.page-home .videos li + li {
  margin-left: 15px;
}

.page-home .videos {
  max-height: 110px;
  overflow: hidden;
}

.page-home .videos li a {
  padding: 4px;
  border: 1px solid #333;
  display: inline-block;
}
.page-home .videos li a.current {
  border: 1px solid #2a6496;
}
.page-home .videos li a:active {
  border: 1px solid #fff;
}

/* * * * * * * * * * * * * * * * * * * *
   Features
   */

.page-home .features .span6 {
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 5px;
}
.page-home .features .span6:hover {
  background: #f0f1f2;
  cursor: pointer
}
.page-home .features .span6 h2 {
  margin-top: 0;
  padding-top: 10px;
}

.page-home .features h1 {
  margin-top: 40px;
}

.page-home .features h2 {
  font-size: 25px;
  margin-bottom: 0.7em;
  color: #222;
}

.page-home .features {
  margin-bottom: 40px;
}

.page-home .features .expandable {
  display: none;
}

.page-home .features .packages {
  width: 100%;
}

.page-home .features .packages td {
  vertical-align: top;
  padding-bottom: 0.125em;
}

@media (max-width: 480px){
  .page-home .features .rhs {
    display: none
  }
}

/* * * * * * * * * * * * * * * * * * * *
   Sponsors
   */

.page-home .sponsors {
  background: #1b2332;
  color: #f0f0f0;
  padding-top: 2em;
  padding-bottom: 2em;
}
.page-home .sponsors h1 {
  margin-bottom: 1em;
}
.page-home .wrap {
  padding-bottom: 0;
}
.page-home .footer {
  background: #1b2332;
}
.page-home .sponsors a:hover {
  color: #71a9d9;
  text-decoration: none;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Responsiveness
   */

@media (max-width: 767px){
  .page-home .header .branding {
    margin-top: 20px;
  }
  .page-home .header {
    padding-bottom: 20px;
  }
  .navbar > div > .collapse {
    display: block;
    margin-left: -15px;
  }
  .navbar-collapse .active > a {
    border: 0 !important;
  }
  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border: 0;
  }
  .footer-contribute {
    display: none;
  }
  .navbar-brand {
    margin-left: 15px !important;
  }
}

@media (max-width: 480px){
  .page-home .navbar {
    display: none;
  }
  .mobile > .navbar {
    display: block;
  }
  .wrap {
    padding-bottom: 0;
  }
  .footer {
    background: #150e1a; /* Old browsers */
    background: -moz-linear-gradient(left, #150e1a 0%, #22172a 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#150e1a), color-stop(100%,#22172a)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(left, #150e1a 0%,#22172a 100%); /* IE10+ */
    background: linear-gradient(to right, #150e1a 0%,#22172a 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#150e1a', endColorstr='#22172a',GradientType=1 ); /* IE6-9 */
  }
}

